# DocuMind

./: .gitignore  Cargo.toml  Makefile  README.md  env.yaml
backend/: Cargo.toml
backend/src/: handlers.rs  processor.rs
client/: index.html  package.json  vite.config.ts
client/src/: AddButton.tsx  App.css  App.tsx  Content.tsx  DataModel.tsx  InputForm.tsx  Modal.tsx  Sidebar.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
server/: Cargo.toml  env.yaml
server/src/: handlers.rs  main.rs  processor.rs  utils.rs
src/: handlers.rs  main.rs  processor.rs  utils.rs  vector_db.rs
