[package]
name = "DocuMind"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
pdf-extract = "0.8.2"
config = "0.15.11"
qdrant-client = "1.13.0"
serde_derive = "1.0.219"
serde = "1.0.219"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
